# AutoPPTX

./: .gitignore  MANIFEST.in  README.md  paper.bib  paper.md  pyproject.toml  setup.py
autopptx/: __init__.py
tests/: test_image.py  test_image_style.py  test_table.py  test_table_style.py  test_text.py  test_text_style.py  test_type.py  test_view.py
